--- a/src/index.css
+++ b/src/index.css
@@ -14,3 +14,16 @@ header {
 body {
   background-color: #e5e5e5;
 }
+
+main {
+  width: 30rem;
+  margin: 0 auto;
+  padding-top: 20px;
+}
+
+button {
+  color: white;
+  background-color: #daa521;
+  border: 0;
+  padding: 7px;
+}
