--- a/src/index.css
+++ b/src/index.css
@@ -14,11 +14,12 @@ header {
 body {
   background-color: #e5e5e5;
 }
-
+/* Main */
 main {
   width: 30rem;
   margin: 0 auto;
   padding-top: 20px;
+  height: calc(100vh - 200px);
 }
 
 button {
@@ -26,4 +27,18 @@ button {
   background-color: #daa521;
   border: 0;
   padding: 7px;
+}
+/* Footer */
+footer {
+  height: 100px;
+  background-color: #333333;
+  text-align: center;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.footer-p {
+  width: 80%;
 }
