--- a/src/index.css
+++ b/src/index.css
@@ -16,10 +16,21 @@ body {
 }
 /* Main */
 main {
-  width: 30rem;
+  max-width: 1320px;
+  display: flex;
   margin: 0 auto;
   padding-top: 20px;
-  height: calc(100vh - 200px);
+  height: calc(100vh - 100px);
+  align-items: flex-start;
+  justify-content: center;
+  gap: 10px;
+}
+.card {
+  max-width: 20rem;
+  height: 150px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+    rgba(0, 0, 0, 0.3) 0px 30px 60px -30px,
+    rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
 }
 
 button {
